<resources>
    <string name="app_name">Safe Shiba Doge Moon Inu</string>
    <string name="title_activity_register_activity">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_password" />
    <string name="new_pass" />
    <string name="btn_change" />
    <string name="btn_send" />
    <string name="btn_remove" />
    <string name="change_password" />
    <string name="remove_user" />
    <string name="btn_sign_out" />
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_support">Support</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="register">Register</string>
    <string name="road_map">ROAD MAP</string>
    <string name="hybrid_map">HYBRID MAP</string>
    <string name="logo">LOGO</string>
    <string name="not_registered_register_now">NOT REGISTERED? REGISTER NOW</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="login">Login</string>
    <string name="already_registered_login_now">Already Registered? Login Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="mail_address">Mail Address</string>
    <string name="gez_maintenance">Gez Maintenance</string>
    <string name="send">send</string>
    <string name="please_write_a_feedback">Please Write a Feedback!</string>
    <string name="please_write_a_subject">Please Write a Subject!</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_with_fingerprint_instead">SIGN IN WITH FINGERPRINT</string>
</resources>
